Final touch-ups.